Modificadas la exportación del gráfico y el botón de borrar selección.

--- a/resources/graphics/LineGraphic.html
+++ b/resources/graphics/LineGraphic.html
@@ -138,6 +138,11 @@ function generateChart(data){
 	myChart.update();
 }
 
+function clearChart(){
+	myChart.data = { labels:[],datasets: []};
+	myChart.update();
+}
+
 function colorGeneration(color){
 	return colorHash.hex(color);
 }
