--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -90,9 +90,9 @@
 	
 </style>
 		
-<script type="text/javascript" src="../../lib/Chart.js"></script>
-<script type="text/javascript" src="../../lib/color-hash.js"></script>
-<script type="text/javascript" src="../../lib/jquery.js"></script>
+<script type="text/javascript" src="Chart.js"></script>
+<script type="text/javascript" src="color-hash.js"></script>
+<script type="text/javascript" src="jquery.js"></script>
 
 </head>
 
